Fix gaps between in charts in dashboard

--- a/src/assets/style/pages/general/_dashboard.scss
+++ b/src/assets/style/pages/general/_dashboard.scss
@@ -1,5 +1,5 @@
 .dashboard {
-  margin-block-start: $content-gap;
+  margin-block: $content-gap;
 
   .dashboard-heading {
     font-size: em(24px);
